--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
   },
   "homepage": "https://github.com/omrfrkcpr/habitHub_API#readme",
   "dependencies": {
+    "cookie-session": "^2.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "express-async-error": "^0.0.2",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
-    "pg": "^8.12.0",
-    "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.3",
-    "sqlite3": "^5.1.7"
+    "mongoose": "^8.4.4",
+    "morgan": "^1.10.0",
+    "redoc-express": "^2.1.0",
+    "swagger-autogen": "^2.23.7",
+    "swagger-ui-express": "^5.0.1"
   }
 }
