feat: Added authentication and authorization MVC and validation middlewares (Token JWT)
Update bcrypt dependency to version 5.1.1,

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "homepage": "https://github.com/omrfrkcpr/habitHub_API#readme",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
+    "bcrypt": "^5.1.1",
     "cookie-session": "^2.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
