--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "express-async-errors": "^3.1.1",
+    "express-async-error": "^0.0.2",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongoose": "^8.4.4",
     "morgan": "^1.10.0",
+    "nodemon": "^3.1.4",
     "redoc-express": "^2.1.0",
     "swagger-autogen": "^2.23.7",
     "swagger-ui-express": "^5.0.1"
