--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bcrypt": "^5.1.1",
     "cookie-session": "^2.1.0",
     "cors": "^2.8.5",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-async-error": "^0.0.2",
