--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "nodemon": "^3.1.4",
     "redoc-express": "^2.1.0",
     "swagger-autogen": "^2.23.7",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "validator": "^13.12.0"
   }
 }
