--- a/package.json
+++ b/package.json
@@ -24,12 +24,18 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-async-error": "^0.0.2",
+    "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongoose": "^8.4.4",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4",
+    "passport": "^0.7.0",
+    "passport-facebook": "^3.0.0",
+    "passport-github2": "^0.1.12",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-twitter": "^1.0.4",
     "redoc-express": "^2.1.0",
     "swagger-autogen": "^2.23.7",
     "swagger-ui-express": "^5.0.1",
