--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "express-async-error": "^0.0.2",
+    "express-async-errors": "^3.1.1",
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
