refactor: Update email templates, styles, and dependencies
Update email templates for password reset, password reset confirmation, and welcome emails. Add new style for paragraphs and adjust background color and text color for links. Include HabitHub logo for consistent branding. Also, update express-async-errors dependency to version 3.1.1 for improved error handling in asynchronous routes. Update social login redirect URLs to match new frontend routes. Add social login functionality. Refactor authentication and password reset functionality to enhance security and user experience. Update idValidation import in routers for improved code readability. Update permissions and validation for all MVC. Refactor isAdminOrOwn middleware in permissions.js for enhanced security. Update package-lock.json and package.json to add validator dependency for input validation. Remove text parameters from sendMail reusable function, preferring html body.

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/omrfrkcpr/habitHub_API#readme",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "cookie-session": "^2.1.0",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
