--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "moment": "^2.30.1",
     "mongoose": "^8.4.4",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4",
     "passport": "^0.7.0",
