--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "passport-facebook": "^3.0.0",
     "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
+    "passport-linkedin-oauth2": "^2.0.0",
     "passport-twitter": "^1.0.4",
     "redoc-express": "^2.1.0",
     "swagger-autogen": "^2.23.7",
