--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@aws-sdk/client-s3": "^3.617.0",
     "aws-sdk": "^2.1662.0",
     "bcrypt": "^5.1.1",
+    "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
