refactor: Simplify id validation middleware

--- a/src/helpers/dailyTasks.json
+++ b/src/helpers/dailyTasks.json
@@ -1,78 +1,362 @@
 [
   {
+    "name": "Wake up",
+    "description": "Get out of bed and start the day. Aim to wake up at a consistent time every morning to regulate your sleep cycle."
+  },
+  {
+    "name": "Brush teeth",
+    "description": "Brush your teeth thoroughly for at least two minutes to maintain oral hygiene. Use fluoride toothpaste and a soft-bristled toothbrush."
+  },
+  {
     "name": "Morning exercise",
-    "description": "Start the day with a 30-minute workout or jog."
+    "description": "Engage in a morning exercise routine such as jogging, yoga, or stretching to boost energy levels and improve overall fitness."
+  },
+  {
+    "name": "Shower",
+    "description": "Take a shower to refresh and wake up fully. Use warm water and your favorite shower products to cleanse your body."
   },
   {
     "name": "Breakfast",
-    "description": "Prepare and eat a healthy breakfast."
+    "description": "Prepare and eat a healthy breakfast to fuel your body for the day. Include a balanced mix of proteins, carbohydrates, and healthy fats."
   },
   {
-    "name": "Read a book",
-    "description": "Spend 20 minutes reading a book."
+    "name": "Review daily goals",
+    "description": "Spend a few minutes reviewing your daily goals and tasks. Prioritize your to-do list to ensure you focus on the most important tasks first."
   },
   {
-    "name": "Check and respond to personal emails",
-    "description": "Review and reply to any personal emails."
+    "name": "Commute to work",
+    "description": "Travel to your workplace. Use this time to listen to a podcast, music, or an audiobook to make the commute more enjoyable."
   },
   {
-    "name": "Grocery shopping",
-    "description": "Buy groceries for the week."
+    "name": "Check emails",
+    "description": "Review and respond to any important emails. Organize your inbox and prioritize messages that require immediate attention."
   },
   {
-    "name": "Coffee with friends",
-    "description": "Meet friends for coffee and catch up."
+    "name": "Team meeting",
+    "description": "Attend the daily team meeting to discuss ongoing projects, address any issues, and align on goals for the day."
   },
   {
-    "name": "Meditation",
-    "description": "Practice meditation for 15 minutes to relax and clear your mind."
+    "name": "Work on priority project",
+    "description": "Dedicate focused time to work on your most important project. Avoid distractions and use productivity techniques like Pomodoro to stay on track."
   },
   {
-    "name": "Lunch",
-    "description": "Prepare and eat a balanced lunch."
+    "name": "Take a short break",
+    "description": "Take a 5-10 minute break to rest and recharge. Step away from your desk, stretch, or take a quick walk."
   },
   {
-    "name": "House cleaning",
-    "description": "Clean and organize a part of your house."
+    "name": "Collaborate with colleagues",
+    "description": "Work collaboratively with colleagues on shared projects. Use communication tools like Slack or Microsoft Teams to stay connected."
   },
   {
-    "name": "Pick up package",
-    "description": "Collect a package from the post office or delivery point."
+    "name": "Lunch break",
+    "description": "Take a break to eat lunch. Choose a nutritious meal and take time to relax away from your work environment."
   },
   {
-    "name": "Call family",
-    "description": "Spend some time catching up with family members over the phone."
+    "name": "Work on secondary tasks",
+    "description": "Focus on completing secondary tasks or smaller projects. Use task management tools to keep track of your progress."
   },
   {
-    "name": "Afternoon walk",
-    "description": "Take a short walk in the afternoon to get some fresh air."
+    "name": "Afternoon coffee break",
+    "description": "Take a short break for coffee or tea. Use this time to socialize with colleagues or simply relax."
+  },
+  {
+    "name": "Attend a workshop or training session",
+    "description": "Participate in any scheduled workshops or training sessions to develop new skills and stay updated on industry trends."
+  },
+  {
+    "name": "Review progress",
+    "description": "Review your progress on daily goals and adjust your plans if necessary. Ensure you are on track to complete your tasks."
+  },
+  {
+    "name": "Prepare for tomorrow",
+    "description": "Plan your tasks and goals for the next day. Organize your workspace and create a to-do list to start the next day productively."
+  },
+  {
+    "name": "Commute home",
+    "description": "Travel back home from work. Use this time to unwind and transition from work mode to relaxation."
+  },
+  {
+    "name": "Dinner",
+    "description": "Prepare and eat a balanced dinner. Include a variety of vegetables, proteins, and whole grains to nourish your body."
+  },
+  {
+    "name": "Spend time with family",
+    "description": "Spend quality time with your family. Engage in conversations, play games, or do activities together to strengthen bonds."
   },
   {
     "name": "Hobby time",
-    "description": "Dedicate time to work on a personal hobby or project."
+    "description": "Dedicate time to a personal hobby or interest. Whether it's reading, painting, or playing a musical instrument, do something you enjoy."
   },
   {
-    "name": "Cook dinner",
-    "description": "Prepare and cook a healthy dinner."
+    "name": "Exercise",
+    "description": "Engage in an evening workout or physical activity. This could be a gym session, a walk, or a home workout routine."
   },
   {
-    "name": "Watch a movie or TV show",
-    "description": "Relax and watch a movie or your favorite TV show."
+    "name": "Evening relaxation",
+    "description": "Relax in the evening with a calming activity. This could include watching a favorite TV show, meditating, or taking a warm bath."
   },
   {
-    "name": "Evening stretch",
-    "description": "Do some light stretching exercises before bed."
+    "name": "Read a book",
+    "description": "Spend some time reading a book before bed. Choose something you enjoy to help unwind and prepare for sleep."
   },
   {
-    "name": "Plan for the next day",
-    "description": "Make a to-do list for the next day and set your priorities."
+    "name": "Plan tomorrow's outfit",
+    "description": "Plan and set out your clothes for the next day to save time in the morning. Ensure they are clean and appropriate for the day’s activities."
+  },
+  {
+    "name": "Night skincare routine",
+    "description": "Follow your night skincare routine to keep your skin healthy. Cleanse, tone, and moisturize your face before bed."
+  },
+  {
+    "name": "Reflect on the day",
+    "description": "Take a few minutes to reflect on your day. Think about what went well, what could be improved, and express gratitude for positive experiences."
+  },
+  {
+    "name": "Prepare lunch for the next day",
+    "description": "Prepare and pack your lunch for the next day. Choose healthy options and make sure it’s ready to grab in the morning."
+  },
+  {
+    "name": "Set alarms",
+    "description": "Set your alarms for the next day to ensure you wake up on time. Double-check the time and make sure your phone is charged."
+  },
+  {
+    "name": "Meditate",
+    "description": "Practice meditation for a few minutes to clear your mind and reduce stress. Focus on deep breathing and relaxation techniques."
   },
   {
     "name": "Journal",
-    "description": "Write down your thoughts, reflections, or experiences from the day."
+    "description": "Write in your journal to document your thoughts, feelings, and experiences. Use this time for self-reflection and personal growth."
   },
   {
-    "name": "Get ready for bed",
-    "description": "Follow your bedtime routine and ensure you get enough sleep."
+    "name": "Water plants",
+    "description": "Take care of your indoor and outdoor plants by watering them as needed. Ensure they are receiving adequate light and care."
+  },
+  {
+    "name": "Clean up kitchen",
+    "description": "Clean up the kitchen after dinner. Wash dishes, wipe down counters, and ensure everything is tidy for the next day."
+  },
+  {
+    "name": "Check social media",
+    "description": "Spend a few minutes checking social media. Stay updated with friends and news, but avoid getting lost in endless scrolling."
+  },
+  {
+    "name": "Call a friend or family member",
+    "description": "Call or video chat with a friend or family member to catch up and stay connected. Maintain strong relationships with regular communication."
+  },
+  {
+    "name": "Prepare gym bag",
+    "description": "Pack your gym bag with everything you need for your workout the next day. Include clothes, shoes, and any necessary equipment."
+  },
+  {
+    "name": "Do laundry",
+    "description": "Complete a load of laundry. Wash, dry, and fold clothes to ensure you have clean attire for the week."
+  },
+  {
+    "name": "Organize workspace",
+    "description": "Organize and clean your workspace to maintain productivity. Remove clutter, arrange supplies, and ensure everything is in order."
+  },
+  {
+    "name": "Meal prep",
+    "description": "Prepare meals in advance for the week. Cook and portion out meals to save time and ensure you eat healthy throughout the week."
+  },
+  {
+    "name": "Review finances",
+    "description": "Check your financial status by reviewing bank accounts, budgets, and expenses. Ensure you are staying on track with your financial goals."
+  },
+  {
+    "name": "Practice a new skill",
+    "description": "Dedicate time to learning or practicing a new skill. This could be anything from a new language to coding or playing an instrument."
+  },
+  {
+    "name": "Grocery shopping",
+    "description": "Go grocery shopping to stock up on essentials and ingredients for meals. Make a list to ensure you get everything you need."
+  },
+  {
+    "name": "Plan weekly schedule",
+    "description": "Plan your schedule for the upcoming week. Include work commitments, personal tasks, and any events or appointments."
+  },
+  {
+    "name": "Clean living space",
+    "description": "Spend time cleaning and tidying up your living space. Vacuum, dust, and organize to maintain a comfortable and clean environment."
+  },
+  {
+    "name": "Update personal calendar",
+    "description": "Update your personal calendar with important dates and appointments. Ensure you are aware of any upcoming commitments."
+  },
+  {
+    "name": "Write to-do list",
+    "description": "Write a to-do list for the next day to stay organized and focused. Prioritize tasks and make sure nothing important is forgotten."
+  },
+  {
+    "name": "Review news",
+    "description": "Spend a few minutes catching up on the news. Stay informed about current events and developments in your community and the world."
+  },
+  {
+    "name": "Prepare breakfast items",
+    "description": "Prepare items for breakfast the next day. Set out ingredients and utensils to save time in the morning."
+  },
+  {
+    "name": "Practice gratitude",
+    "description": "Take a moment to practice gratitude. Reflect on positive aspects of your life and express appreciation for them."
+  },
+  {
+    "name": "Stretch before bed",
+    "description": "Do some gentle stretching before bed to relax your muscles and prepare for a restful night's sleep."
+  },
+  {
+    "name": "Check weather forecast",
+    "description": "Check the weather forecast for the next day to plan your attire and any outdoor activities accordingly."
+  },
+  {
+    "name": "Organize email inbox",
+    "description": "Spend a few minutes organizing your email inbox. Delete unnecessary messages, categorize emails, and respond to important ones."
+  },
+  {
+    "name": "Mindful breathing exercises",
+    "description": "Practice mindful breathing exercises to reduce stress and promote relaxation. Focus on deep, slow breaths."
+  },
+  {
+    "name": "Prepare work materials",
+    "description": "Gather and organize materials you need for work the next day. Ensure you have any necessary documents, tools, or supplies ready."
+  },
+  {
+    "name": "Set daily intentions",
+    "description": "Set positive intentions for the day ahead. Focus on what you want to achieve and how you want to approach the day."
+  },
+  {
+    "name": "Check in with team",
+    "description": "Check in with your team members to see how they are doing. Offer support and address any concerns they may have."
+  },
+  {
+    "name": "Update project status",
+    "description": "Update the status of ongoing projects. Communicate progress and any blockers to relevant stakeholders."
+  },
+  {
+    "name": "Take a power nap",
+    "description": "If feeling fatigued, take a short power nap (10-20 minutes) to rejuvenate and boost productivity for the rest of the day."
+  },
+  {
+    "name": "Organize digital files",
+    "description": "Spend time organizing your digital files. Create folders, delete unnecessary files, and back up important data."
+  },
+  {
+    "name": "Listen to a podcast",
+    "description": "Listen to an educational or entertaining podcast. Use this time to learn something new or relax with a favorite show."
+  },
+  {
+    "name": "Plan a social event",
+    "description": "Plan a social event with friends or family. Schedule a dinner, outing, or virtual gathering to stay connected."
+  },
+  {
+    "name": "Volunteer",
+    "description": "Dedicate time to volunteering for a cause you care about. Find opportunities to give back to your community."
+  },
+  {
+    "name": "Declutter a space",
+    "description": "Choose a specific area in your home or workspace to declutter. Remove items you no longer need and organize the space."
+  },
+  {
+    "name": "Watch an educational video",
+    "description": "Watch a video on a topic you're interested in learning more about. Use platforms like YouTube or online courses."
+  },
+  {
+    "name": "Prepare for meetings",
+    "description": "Prepare for any upcoming meetings by reviewing agendas, gathering necessary documents, and setting clear objectives."
+  },
+  {
+    "name": "Schedule appointments",
+    "description": "Schedule any necessary appointments, such as doctor visits, car maintenance, or meetings with clients."
+  },
+  {
+    "name": "Practice a foreign language",
+    "description": "Spend time practicing a foreign language you are learning. Use language apps, watch videos, or converse with native speakers."
+  },
+  {
+    "name": "Update to-do app",
+    "description": "Update your to-do list app with new tasks, completed tasks, and priorities. Keep it current to stay organized."
+  },
+  {
+    "name": "Take a walk",
+    "description": "Go for a walk outside to get some fresh air and light exercise. Use this time to clear your mind and enjoy nature."
+  },
+  {
+    "name": "Plan meals for the week",
+    "description": "Plan your meals for the week ahead. Create a menu and shopping list to ensure you have everything you need."
+  },
+  {
+    "name": "Check in with a mentor",
+    "description": "Check in with your mentor to discuss your progress and any challenges you are facing. Seek advice and guidance."
+  },
+  {
+    "name": "Set personal development goals",
+    "description": "Set goals for your personal development. Identify areas you want to improve and create a plan to achieve them."
+  },
+  {
+    "name": "Reflect on personal growth",
+    "description": "Take time to reflect on your personal growth and achievements. Celebrate successes and identify areas for improvement."
+  },
+  {
+    "name": "Clean and organize closet",
+    "description": "Clean and organize your closet. Donate clothes you no longer wear and arrange items for easy access."
+  },
+  {
+    "name": "Review and update resume",
+    "description": "Review and update your resume with any new skills, experiences, or accomplishments. Keep it current for potential opportunities."
+  },
+  {
+    "name": "Plan a weekend activity",
+    "description": "Plan an enjoyable activity for the weekend. Consider outdoor adventures, cultural events, or relaxing pastimes."
+  },
+  {
+    "name": "Cook a new recipe",
+    "description": "Try cooking a new recipe for a change. Explore different cuisines and expand your culinary skills."
+  },
+  {
+    "name": "Take a relaxing bath",
+    "description": "Take a relaxing bath to unwind and de-stress. Use bath salts, essential oils, and calming music for a spa-like experience."
+  },
+  {
+    "name": "Do a puzzle",
+    "description": "Spend time working on a puzzle, such as a jigsaw puzzle, crossword, or sudoku. Challenge your mind and enjoy the process."
+  },
+  {
+    "name": "Visit a local attraction",
+    "description": "Visit a local attraction or landmark you've never been to before. Explore your city and learn something new."
+  },
+  {
+    "name": "Attend a cultural event",
+    "description": "Attend a cultural event, such as a concert, theater performance, or art exhibit. Enjoy the experience and broaden your horizons."
+  },
+  {
+    "name": "Practice deep breathing",
+    "description": "Practice deep breathing exercises to reduce stress and promote relaxation. Focus on slow, deep breaths."
+  },
+  {
+    "name": "Explore a new hobby",
+    "description": "Try exploring a new hobby that interests you. Whether it's painting, knitting, or gardening, find something that brings you joy."
+  },
+  {
+    "name": "Spend time in nature",
+    "description": "Spend time in nature to relax and rejuvenate. Go for a hike, visit a park, or simply sit outside and enjoy the surroundings."
+  },
+  {
+    "name": "Watch a documentary",
+    "description": "Watch a documentary on a topic you're interested in. Use this time to learn something new and expand your knowledge."
+  },
+  {
+    "name": "Try a new workout routine",
+    "description": "Try a new workout routine to keep your exercise regimen interesting. Explore different types of exercise to find what you enjoy."
+  },
+  {
+    "name": "Declutter digital devices",
+    "description": "Spend time decluttering your digital devices. Delete old files, organize folders, and clear out unnecessary apps."
+  },
+  {
+    "name": "Practice self-care",
+    "description": "Engage in self-care activities to nurture your well-being. This could include skincare, meditation, or taking time for yourself."
+  },
+  {
+    "name": "Write a letter or email",
+    "description": "Write a letter or email to someone you haven't connected with in a while. Reach out to friends or family and maintain relationships."
   }
 ]
